Closed Bug 786449 Opened 12 years ago Closed 12 years ago

Explicitly initialize RasterImage on the main thread at XPCOM startup

Categories

(Core :: Graphics: ImageLib, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: joe, Assigned: joe)

References

Details

Attachments

(1 file)

If we lazily initialize some singletons created in bug 486918 in imagelib, we run into troubles because they're not initialized on the main thread. (ClearOnShutdown() only works on the main thread.) So let's just create a place for them to be initialized on the main thread.
Attachment #656215 - Flags: review?(justin.lebar+bug)
Summary: Explicitly initialize imagelib on the main thread at XPCOM startup → Explicitly initialize RasterImage on the main thread at XPCOM startup
Comment on attachment 656215 [details] [diff] [review]
initialize RasterImage at startup

r=me, but maybe add an explicit assertion that RasterImage::Initialize is called on main thread, so there's no confusion?
Attachment #656215 - Flags: review?(justin.lebar+bug) → review+
Push backed out on suspicion of causing intermittent Android reftest failures like:
https://tbpl.mozilla.org/php/getParsedLog.php?id=15640210&tree=Mozilla-Inbound
https://tbpl.mozilla.org/php/getParsedLog.php?id=15638930&tree=Mozilla-Inbound
https://tbpl.mozilla.org/php/getParsedLog.php?id=15639608&tree=Mozilla-Inbound

Retriggers are pending and I believe will confirm one of the bugs in the push to be the cause, but we can't afford to keep the tree closed any longer, so backing this out for now. Retrigger results will be at:
https://tbpl.mozilla.org/?tree=Mozilla-Inbound&jobname=%20reftest&rev=92530b29ac24

Backout:
https://hg.mozilla.org/integration/mozilla-inbound/rev/28e5dc437921
https://hg.mozilla.org/mozilla-central/rev/a96be857cca7
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.