Bug 786449 - Add a place to explicitly initialize RasterImage on the main thread at startup. r=jlebar

--HG--
extra : rebase_source : d23afb459bca8c36467ad2af042580a96666b886