image/build/nsImageModule.cpp
@@ -96,6 +96,7 @@ static nsresult
 imglib_Initialize()
 {
   mozilla::image::DiscardTracker::Initialize();
+  mozilla::image::RasterImage::Initialize();
   imgLoader::GlobalInit();
   return NS_OK;
 }
